# level3_cv_finalproject-cv-15

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py  settings.sh
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
DualStyleGAN/: README.md  app.py  style_transfer.py
api/: app.py
celery/: dog_eyes_worker.py
demo/: disease.json  eye.py  homepage.py  skin.py
src/: README.md  model.py  train.py  utils.py
src/config/: __init__.py  callbacks.py  datamodule.py  logger.py  loss.py  model.py  module.py  optimizer.py  other.py  scheduler.py  trainer.py  transform.py
src/data/: __init__.py  datamodule.py  dataset.py
src/loss/: __init__.py  loss.py
src/models/: __init__.py  resnet.py
src/module/: __init__.py  classification.py  segmentation.py
src/utils/: __init__.py  gradcam.py
web/: main.py
web/app/: models.py
web/app/routes/: desease.py  eye.py  gan.py  kakaomap.py  landing.py  login.py  register.py  skin.py
web/app/schema/: __init__.py  pet.py  script.py  user.py
web/app/templates/: 401.html  404.html  demo.html  detail_post.html  disease-cat-eye.html  disease-cat-skin.html  disease-dog-eye.html  disease-dog-skin.html  disease.html  index.html  kakao_map.html  landing.html  login.html  model1.html  model3.html  model5.html  no-pet.html  pet-register.html  sign-up.html  team.html
web/app/utils/: __init__.py  (+1 more)
worker/: cat_eyes_worker.py  cat_skin_worker.py  dog_eyes_worker.py  dog_skin_worker.py  eyes_crop_worker.py  gan_model_worker.py
worker/utils/: __init__.py
(+11 files in other folders)
